--- a/src/lib/styles/_typography.scss
+++ b/src/lib/styles/_typography.scss
@@ -13,6 +13,7 @@ $max-viewport: 1240px;
   line-height: 1.1;
   font-weight: 700;
   margin-bottom: 0.5em;
+  text-wrap: pretty;
   text-wrap: balance;
   color: var(--color-accent);
 }
