--- a/src/lib/styles/_variables.scss
+++ b/src/lib/styles/_variables.scss
@@ -94,6 +94,7 @@ $transition-fast: 150ms;
 $transition-normal: 250ms;
 $transition-slow: 350ms;
 $transition-slower: 500ms;
+$transition-opacity-fast: 100ms; // New variable for nav text opacity
 $transition-bezier: cubic-bezier(0.4, 0, 0.2, 1);
 
 // Dimensions
@@ -104,7 +105,6 @@ $readable-max-width: 70ch; // Optimal reading width (ch units are width of "0" c
 $sidebar-width: 400px;
 $sidebar-collapsed-width:80px;
 $sidebar-width-full: 300px; // Consider consolidating with $sidebar-width
-$sidebar-width-mini: 100px;
 $sidebar-transition-duration: $transition-slow;
 $sidebar-transition-timing: $transition-bezier;
 $navbar-height: 80px;
@@ -355,6 +355,7 @@ $leo-color-light: #1E40AF;  // Blue 800
   --transition-normal: #{$transition-normal};
   --transition-slow: #{$transition-slow};
   --transition-slower: #{$transition-slower};
+  --transition-opacity-fast: #{$transition-opacity-fast};
   --transition-bezier: #{$transition-bezier};
 
   // Dimensions (Keep As Is)
@@ -365,7 +366,6 @@ $leo-color-light: #1E40AF;  // Blue 800
   --sidebar-width: #{$sidebar-width};
   --sidebar-collapsed-width: #{$sidebar-collapsed-width};
   --sidebar-width-full: #{$sidebar-width-full};
-  --sidebar-width-mini: #{$sidebar-width-mini};
   --sidebar-transition-duration: #{$sidebar-transition-duration};
   --sidebar-transition-timing: #{$sidebar-transition-timing};
 
