--- a/src/lib/styles/chapter-styles.scss
+++ b/src/lib/styles/chapter-styles.scss
@@ -124,7 +124,7 @@
 
 // Sidebar Navigation Styling adjustments
 nav .nav-items li.nav-chapter-group[class*="chapter-"][class*="-theme"].is-active {
-  border-left: 3px solid var(--chapter-color);
+  border-right: 3px solid var(--chapter-color);
   background-color: var(--chapter-sidebar-bg);
 }
 
@@ -134,7 +134,7 @@ nav .nav-items li.nav-chapter-group[class*="chapter-"][class*="-theme"] .nav-ite
 
 
 nav .nav-items li.nav-chapter-group[class*="chapter-"][class*="-theme"]:not(.is-active):hover {
-  background-color: color-mix(in srgb, var(--chapter-bg) 90%, black);
+  background-color: color-mix(in srgb, var(--chapter-bg) 90%, white);
 }
 // Chapter numbers in the sidebar
 nav .nav-items li.nav-chapter-group[class*="chapter-"][class*="-theme"] .chapter-number {
